--- a/src/Components/Companies/Companies.css
+++ b/src/Components/Companies/Companies.css
@@ -5,6 +5,7 @@
 }
 .c-container{
     display: flex;
+    width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
     flex-direction: row;
@@ -12,7 +13,7 @@
     
 }
 .c-container>img{
-    width: 8rem;
+    width: 9rem;
     margin: 2vw;
 }
 @media (max-width: 640px) {
